# GodotCppTest

./: CMakeLists.txt
gameplay/: CMakeLists.txt
gameplay/src/: gdextension_registration.cpp
gdproj/: project.godot
gdproj/gameplay/: testproj.gdextension
